Fix for ticket 5008 : layout issue with validation
On postcode lookup pages

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -865,6 +865,7 @@ ul.ui-corner-all, ul li a.ui-corner-all {
   border: 1px solid #ffc946;
   background-color: #fbedcd;
   padding: 0 1em;
+  margin-bottom: 1em;
 
   p {
     @include core-16;
